hydroflow/tests/compile-fail/surface_lattice_reduce_nogeneric.stderr
error: `lattice_reduce` should have exactly 1 generic type arguments, actually has 0.
 --> tests/compile-fail/surface_lattice_reduce_nogeneric.rs:6:33
  |
6 |             -> lattice_reduce::<'static>()
  |                                 ^^^^^^^
